--- a/smart healthcare system/server/package.json
+++ b/smart healthcare system/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "mongoose": "^8.9.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "socket.io": "^4.8.1"
   }
 }
