--- a/smart healthcare system/client/package.json
+++ b/smart healthcare system/client/package.json
@@ -19,8 +19,10 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.9.0",
     "react-toastify": "^10.0.6",
-    "react-tsparticles": "^2.12.2"
+    "react-tsparticles": "^2.12.2",
+    "socket.io-client": "^4.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
