--- a/smart healthcare system/client/package.json
+++ b/smart healthcare system/client/package.json
@@ -8,6 +8,7 @@
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "date-fns": "^4.1.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "gsap": "^3.12.5",
