--- a/smart healthcare system/client/package.json
+++ b/smart healthcare system/client/package.json
@@ -7,17 +7,24 @@
     "@emotion/react": "^11.14.0",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.7",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
+    "leaflet": "^1.9.4",
+    "leaflet-control-geocoder": "^3.1.0",
+    "leaflet-routing-machine": "^3.2.12",
+    "mapbox-gl": "^3.9.3",
     "mongoose": "^8.9.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.9.0",
